UX: Fix GIF modal width and height
Avoids extra scrollbars.

--- a/common/common.scss
+++ b/common/common.scss
@@ -20,7 +20,7 @@ html:not(.discourse-gifs-with-img)
 
 .gif-modal {
   .d-modal__container {
-    --modal-max-width: 900px;
+    --modal-max-width: 920px;
   }
 
   .gif-input {
