--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,4 +1,5 @@
 .gif-modal .gif-content {
+  max-height: 60vh;
   min-width: 650px; // 3 columns of gifs
 }
 
